0.30 2013-06-06
        - 0.30_1
	  - Escape fields by default.

0.29 2013-06-02
        - 0.29_1
	  - Add list method.
	- 0.29_2
	  - Fix count bug.
	  - Fixed bug in list caching.
	- 0.29_3
	  - Fix perl 5.18.0 compatibility problems.
	- 0.29_4
	  - Add absent and disparate filter operations in list.
	- 0.29_5
	  - Support -or and -and junctions.
	- 0.29_6
	  - Fix hash randomization bug in test suite.
	- 0.29_7
	  - Fix stringification bug in merge.
	- 0.29_8
	  - Fix small bug in automatic disconnect.

0.28 2013-05-15
        - 0.28_1
	  - Improve documentation.
	  - Add SQLite tests to the suite.
	  - Improve Synopsis.
	  - Prepare first CPAN release.
	- 0.28_2
	  - Fixed small bug in test suite for
	    CHI free environments.
	- 0.28_3
	  - Fixed small bug in test suite for
	    CHI free environments (2).
	- 0.28_4
	  - Circumvent bug (?) in calculations in DBD::SQLite.
	- 0.28_5
	  - Fixed hash sorting bug in test suite.
	- 0.28_6
	  - Improved test suite.
	- 0.28_7
	  - Added escaped SQL for pairs.

0.27 2013-02-13
        - Enable extensions.
	- Add local $_ to select callbacks.
	- Add local $_ to transaction callbacks.
	- Add 'not in' operator.
	- Make 'Offset' only work inside 'limit'

0.26 2013-02-05
        - Updated year.
	- Documentation tweak.

0.25 2012-12-01
        - Moved "created" method to SQLite Driver.
	- Improved documentation.

0.24 2012-11-28
        - Bugfix for transaction callbacks.
	- Bugfix for automatic prefixing.

0.23 2012-06-28
        - Improved MySQL support.
        - Made testsuite work with different databases.
        - Added TEST_DB flag for make test.
        - Added MySQL driver.
	- Made SQLite instantiation a little smarter for
	  multi instance startups.

0.22 2012-06-13
        - Added autocommit method to SQLite driver.
	- improved Constructor method for SQLite files.
	- Introduces import_sql method and constructor parameter.
	- Improved field syntax.
        - Fixed a small bug regarding in_txn.