@@ -4,7 +4,7 @@
       "Nils Diewald"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.120921",
+   "generated_by" : "ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921",
    "license" : [
       "perl_5"
    ],
@@ -55,5 +55,5 @@
          "url" : "https://github.com/Akron/DBIx-Oro"
       }
    },
-   "version" : "0.30_1"
+   "version" : "0.30_2"
 }
