@@ -1,6 +1,8 @@
 0.30 2013-06-06
         - 0.30_1
 	  - Escape fields by default.
+        - 0.30_2
+	  - Add callback support for list method.
 
 0.29 2013-06-02
         - 0.29_1
